# pni-libraries.libpniio

./: .cproject  .gitignore  .gitmodules  .project  .travis.yml  BuildConfig.py  CHANGELOG.md  CMakeLists.txt  HDF5SupportTest.nxs  INSTALL  Makefile  README  README.md  RELEASE_NOTE  SConstruct  TODO  builddeb.sh  conanfile.py  conanfile.txt  conanfile_desy.txt  genindex.html  h5cpp_conanfile.py  index.html  metric.sh  objects.inv  pniio-config.cmake  pninexus-config.cmake  search.html  searchindex.js  test.xml
configure/: BoostConfig.cmake  CMakeLists.txt  CheckCompilerCaps.cmake  CheckTypeSize.cmake  ConfigureHDF5.cmake  ConfigureSZLib.cmake  ConfigureZLib.cmake  FindPniCore.cmake  InstallConfig.cmake  SConscript
doc/: .gitignore  CMakeLists.txt  Doxyfile.cmake  Doxyfile.extension.in  Doxyfile.standard.in  SConscript  _config.yml  algorithm_code  algorithm_code.cmake  ascii_io.cmake  conf.py.in  general_io.cmake  h5_implementation_classes  image_io.cmake  implementation_interface  index.rst  installation.in  mainpage.in  nexus_io.cmake  nexus_tree.dia  nexus_utilities  nxpath_code  nxpath_code.cmake  nxpath_considerations.xoj  usage.in  variant_code  xml_code
doc/_static/: CMakeLists.txt
doc/_templates/: CMakeLists.txt
doc/admin-guide/: .gitignore  SConscript  admin-guide.tex
doc/api/: CMakeLists.txt  Doxyfile.cmake  ascii.rst  ascii_io.cmake  ascii_parsers.rst  core.rst  core_exception.rst  core_mdarray.rst  core_type.rst  core_type_erasure.rst  doxygen-bizflat.css  exceptions.rst  h5_implementation_classes.cmake  image.rst  index.rst  mainpage.cmake  nexus.rst  nexus_algorithm.rst  nexus_file.rst  nexus_path.rst  nexus_utilities.cmake  nexus_utils.rst  nexus_xml.rst  nxpath_code.cmake  xml_code.cmake
doc/design/: link_problems.rst  multi_dim_array_parser.txt  nexus_classes.dia  nxpath_considerations.xoj  parent_problem.dia  type_conversions.txt
doc/developers-guide/: bridge_implementation.ssd  developers.tex  hdf5_object_hierarchy.ssd  nexus_object_hierachy.ssd
doc/examples/: .gitignore  CMakeLists.txt  Makefile  nxbinfield_ex1.cpp  nxfile_ex1.cpp  nxgroup_ex1.cpp  nxgroup_ex2.cpp  nxnumfield_ex1.cpp  nxnumfield_ex2.cpp  nxnumfield_ex4.cpp  nxstrfield_ex1.cpp  nxstrfield_ex2.cpp  record_parser.cpp  simple_ex1.cpp  simple_io.cpp  thread_ex1.cpp
doc/images/: CMakeLists.txt
doc/model/: pniio.notation  pniio.uml  pninexus.notation
doc/notes/: get_parent.txt
doc/ug/: .gitignore  CMakeLists.txt  latexmkrc  libpniio_ug.bib  libpniio_ug.tex
doc/users-guide/: .gitignore  SConscript  users-guide.bib  users-guide.tex
doc/users_guide/: CMakeLists.txt  ascii.rst  ascii_lowlevel.rst  ascii_spreadsheet.rst  basic_usage.rst  core_type_erasures.rst  core_types.rst  image.rst  index.rst  installation.rst  introduction.rst  legacy.rst  nexus.rst  nexus_files.rst  nexus_groups.rst  nexus_introduction.rst  nexus_path.rst  nexus_retrieval.rst  nexus_search.rst  nexus_xml.rst  usage.rst
src/: .gitignore  CMakeLists.txt  NX.hpp  NXAttribute.hpp  NXAttributeIterator.hpp  NXBaseClasses.hpp  NXBinaryField.hpp  NXConfiguration.hpp  NXDateTime.cpp  NXDateTime.hpp  NXDeflateFilter.hpp  NXException.cpp  NXException.hpp  NXExceptions.cpp  NXExceptions.hpp  NXField.cpp  NXField.hpp  NXFieldIterator.hpp  NXFieldUtils.hpp  NXFile.hpp  NXFileOps.hpp  NXFilter.hpp  NXGroup.cpp  NXGroup.hpp  NXImpCode.hpp  NXImpCodeMap.hpp  NXImpMap.hpp  NXLink.cpp  NXLink.hpp  NXNumericField.hpp  NXObject.cpp  NXObject.hpp  NXObjectIterator.hpp  NXObjectType.hpp  NXSelection.hpp  NXStringField.hpp  NXTypes.hpp  NXentry.hpp  SConscript  cbf_reader.cpp  (+40 more)
src/base_classes/: BaseClassExceptions.cpp  BaseClassExceptions.hpp  BaseClassUtilities.hpp  NXFieldRestriction.cpp  NXFieldRestriction.hpp  NXStandardGroup.hpp  NXattenuator.hpp  NXbeam.hpp  NXbeam_stop.hpp  NXbending_magnet.hpp  NXcrystal.hpp  NXdata.hpp  NXdetector.hpp  NXentry.hpp  NXinstrument.hpp  NXnote.hpp  NXroot.hpp  NXsource.hpp  SConscript
src/cbf/: CMakeLists.txt  cbf_reader.cpp  dectris_reader.cpp  dectris_reader.hpp  types.hpp
src/config/: NXConfig.cpp  NXConfig.hpp
src/fio/: CMakeLists.txt  fio_reader.cpp
src/formatters/: CMakeLists.txt  scalar_format.cpp  vector_format.cpp
src/h5/: H5Attribute.cpp  H5Attribute.hpp  H5AttributeObject.cpp  H5AttributeObject.hpp  H5Dataset.cpp  H5Dataset.hpp  H5Dataspace.cpp  H5Dataspace.hpp  H5Datatype.cpp  H5Datatype.hpp  H5DatatypeFactory.cpp  H5DatatypeFactory.hpp  H5DeflateFilter.cpp  H5DeflateFilter.hpp  H5Error.cpp  H5ErrorStack.cpp  H5ErrorStack.hpp  H5Exceptions.cpp  H5Exceptions.hpp  H5File.cpp  H5File.hpp  H5Filter.cpp  H5Filter.hpp  H5Group.cpp  H5Group.hpp  H5LZFFilter.cpp  H5LZFFilter.hpp  H5LibrarySetup.cpp  H5LibrarySetup.hpp  H5Link.cpp  H5Link.hpp  H5LinkIterator.hpp  H5NamedObject.cpp  H5NamedObject.hpp  H5Object.cpp  H5Object.hpp  H5ObjectType.hpp  H5Path.cpp  H5Path.hpp  H5Selection.cpp  (+28 more)
src/nx/: CMakeLists.txt  io_utils.hpp  link.cpp  nexus_utils.hpp  nx.hpp  nx_hdf5_implementation.hpp  nx_utils.hpp  nxattribute.hpp  nxconfiguration.hpp  nxdate_time.cpp  nxdate_time.hpp  nxdeflate_filter.hpp  nxexceptions.cpp  nxexceptions.hpp  nxfield.hpp  nxfield_utils.hpp  nxfile.hpp  nxfilter.hpp  nxgroup.hpp  nximp_code.hpp  nximp_code_map.hpp  nximp_map.hpp  nxlink.cpp  nxlink_info.hpp  nxlink_type.cpp  nxobject.hpp  (+11 more)
test/: .gitignore  CMakeLists.txt  EqualityCheck.cpp  EqualityCheck.hpp  H5AttributeObjectTest.cpp  H5AttributeObjectTest.hpp  H5AttributeTest.cpp  H5AttributeTest.hpp  H5DatasetTest.cpp  H5DatasetTest.hpp  H5DataspaceTest.cpp  H5DataspaceTest.hpp  H5DatatypeTest.cpp  H5DatatypeTest.hpp  H5FileTest.cpp  H5FileTest.hpp  H5GroupTest.cpp  H5GroupTest.hpp  H5LinkTest.cpp  H5LinkTest.hpp  H5NamedObjectTest.cpp  H5NamedObjectTest.hpp  H5ObjectTest.cpp  H5ObjectTest.hpp  H5PathTest.cpp  H5PathTest.hpp  H5SelectionTest.cpp  H5SelectionTest.hpp  NXAttributeTest.cpp  NXAttributeTest.hpp  NXBinaryFieldTest.cpp  NXBinaryFieldTest.hpp  NXFieldTest.cpp  NXFieldTest.hpp  NXFileTest.cpp  NXFileTest.hpp  NXGroupTest.cpp  NXGroupTest.hpp  NXNumericFieldTest.cpp  NXNumericFieldTest.hpp  (+86 more)
(+14459 files in other folders)
